--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
+    "marked": "^0.5.1",
     "react": "16.0.0",
     "react-dom": "16.0.1"
   },
